--- a/libs/demo-ui/src/lib/typeaheads/typeaheads.component.scss
+++ b/libs/demo-ui/src/lib/typeaheads/typeaheads.component.scss
@@ -12,3 +12,31 @@
   font-weight: bold;
   text-decoration: underline;
 }
+
+
+.css-box {
+  font-size: 13px;
+  line-height: 18px;
+  font-weight: 400;
+  color: rgb(51, 51, 51);
+  font-family: inherit;
+  -webkit-box-align: center;
+  align-items: center;
+  background-color: rgb(232, 235, 237);
+  cursor: pointer;
+  display: inline-flex;
+  min-width: 0px;
+  max-width: 100%;
+  box-sizing: border-box;
+  border-radius: 2px;
+  padding: 0px 4px;
+  margin: 4px 2px;
+  min-height: 24px;
+  box-shadow: none;
+}
+
+.btn {
+  padding: 0.1em 0.5em;
+}
+
+
