fixed the build issue

--- a/libs/one-ui/src/lib/datepicker/datepicker.component.scss
+++ b/libs/one-ui/src/lib/datepicker/datepicker.component.scss
@@ -1,4 +1,4 @@
-@import "../../../../one-ux/one-ux.scss";
+@import "../../../../one-ux/scss/overrides";
 
 .datepicker-container {
   max-width: 180px;
