--- a/libs/one-ui/src/lib/timepicker/timepicker.component.scss
+++ b/libs/one-ui/src/lib/timepicker/timepicker.component.scss
@@ -1,4 +1,4 @@
-@import "../../../../one-ux/one-ux.scss";
+@import "../../../../one-ux/scss/overrides";
 .error-message {
   color: $red;
   font-size: 14px;
