updated the home page

--- a/libs/demo-ui/src/lib/home/home.component.html
+++ b/libs/demo-ui/src/lib/home/home.component.html
@@ -135,7 +135,7 @@
 		</div>
 		<div class="card col">
 			<div class="p-3 text-center bg-light">
-				<a routerLink="/home#9">
+				<a routerLink="/date-picker">
 					Date Picker
 				</a>
 				<span class="position-absolute fixed-top top-0 start-100 translate-middle p-2 bg-success border border-light rounded-circle">
@@ -145,7 +145,7 @@
 		</div>
 		<div class="card col">
 			<div class="p-3 text-center bg-light">
-				<a routerLink="/home#8">
+				<a routerLink="/time-picker">
 					Time Picker
 				</a>
 				<span class="position-absolute fixed-top top-0 start-100 translate-middle p-2 bg-success border border-light rounded-circle">
