--- a/libs/demo-ui/src/lib/date-picker/date-picker.component.html
+++ b/libs/demo-ui/src/lib/date-picker/date-picker.component.html
@@ -1,8 +1,14 @@
 <div class="container">
-  <div class="row d-flex justify-content-around">
+  <div class="row">
+    <h1 id="links">Date Picker (WIP)</h1>
+  </div>
+</div>
+
+<hr />
+
+<div class="container">
     <div class="col-10">
       <div class="mb-4">
-        <h1 class="mb-3">Date Picker</h1>
         <rex-lib-datepicker [minDate]="minDate"
                             [maxDate]="maxDate"
                             [isDisabled]="isDisabled"
@@ -25,7 +31,6 @@
                             subLabel="Example: 2020-01-31 - 2020-01-31"
                             formControlName="dateRange">
         </rex-lib-datepicker>
-      </div>
     </div>
   </div>
 </div>
