--- a/libs/demo-ui/src/lib/time-picker/time-picker.component.html
+++ b/libs/demo-ui/src/lib/time-picker/time-picker.component.html
@@ -1,7 +1,15 @@
 <div class="container">
   <div class="row">
+    <h1 id="links">Time Picker (WIP)</h1>
+  </div>
+</div>
+
+<hr />
+
+
+<div class="container">
+  <div class="row">
     <div class="col-12" >
-      <h1 class="mb-3">Date Picker</h1>
       <rex-timepicker [formGroup]="datePickerFormGroup"
                       formControlName="date">
 
