--- a/libs/demo-ui/src/lib/home/home.component.html
+++ b/libs/demo-ui/src/lib/home/home.component.html
@@ -234,9 +234,12 @@
 		</div>
 		<div class="card col">
 			<div class="p-3 text-center bg-light">
-				<a routerLink="/home#17">
+				<a routerLink="/tabs">
 					Tabs
 				</a>
+				<span class="position-absolute fixed-top top-0 start-100 translate-middle p-2 bg-success border border-light rounded-circle">
+					<span class="visually-hidden">work in progress</span>
+				</span>
 			</div>
 		</div>
 		<div class="card col">
