finished modal component

--- a/libs/one-ux/scss/_global.scss
+++ b/libs/one-ux/scss/_global.scss
@@ -159,6 +159,31 @@ a {
   }
 }
 
+.btn:focus, .btn.focus {
+  box-shadow: 0 0 0 0.1px currentColor !important;
+}
+
+.btn-outline-current-color {
+  color: currentColor;
+  border-color: transparent;
+  &:focus, &:hover, &:active, &.focus, &.hover, &.active {
+    color: currentColor;
+    border-color: currentColor;
+    box-shadow: 0 0 0 0.1px currentColor;
+  }
+}
+.btn-current-color {
+  color: currentColor;
+  border-color: transparent;
+  opacity: 0.8;
+  &:focus, &:hover, &:active, &.focus, &.hover, &.active {
+    color: currentColor;
+    border-color: currentColor;
+    opacity: 1;
+    box-shadow: 0 0 0 1px currentColor;
+  }
+}
+
 .form-check-input:checked[type='checkbox'] {
   &:hover {
     background-color: $primary-dark-1;
@@ -220,3 +245,72 @@ a {
   font-size: 14px;
 }
 
+
+.oux-form {
+
+  .oux-row {
+    align-items: start;
+
+    &.oux-bar {
+      display: flex;
+      margin-bottom:0px;
+      align-items: center;
+      align-self: center;
+
+      .oux-bar {
+        &.mt-2 {
+          margin-top: 0 !important;
+        }
+        &.mb-2 {
+          margin-bottom: 0 !important;
+        }
+      }
+
+      > .form-group {
+        margin-bottom:0px;
+        /*
+        padding-right: $form-grid-gutter-width / 2;
+        padding-left: $form-grid-gutter-width / 2;
+        */
+        padding-left:0.5rem;
+        padding-right:0.5rem;
+
+        &:first-of-type {
+          padding-left:0;
+        }
+        &:last-of-type {
+          padding-right:0;
+        }
+      }
+    }
+
+    /*
+    &.form-row {
+      margin-bottom: $form-group-margin-bottom;
+      // - this was causing double padding when .form-group was being used on :not(.col-*-12)
+
+
+      > .form-group {
+
+
+        &:first-of-type {
+          margin-top:0;
+        }
+
+        &:last-of-type:not(.column-has-section) {
+          margin-bottom:0;
+          &:only-child {
+            margin-bottom: $form-group-margin-bottom !important;
+          }
+        }
+
+        > :last-child {
+          margin-bottom: 0 !important;
+        }
+
+      }
+    }
+    */
+  }
+
+}
