--- a/libs/demo-ui/src/lib/home/home.component.html
+++ b/libs/demo-ui/src/lib/home/home.component.html
@@ -213,7 +213,7 @@
 		</div>
 		<div class="card col">
 			<div class="p-3 text-center bg-light">
-				<a routerLink="/home#16">
+				<a routerLink="/modals">
 					Modals
 				</a>
 			</div>
