--- a/libs/one-ux/scss/_bootstrap_overrides.scss
+++ b/libs/one-ux/scss/_bootstrap_overrides.scss
@@ -1651,3 +1651,7 @@ $kbd-color:                         $white !default;
 $kbd-bg:                            $gray-900 !default;
 
 $pre-color:                         null !default;
+
+
+// modal
+
