--- a/libs/demo-ui/src/lib/home/home.component.html
+++ b/libs/demo-ui/src/lib/home/home.component.html
@@ -216,6 +216,9 @@
 				<a routerLink="/modals">
 					Modals
 				</a>
+        <span class="position-absolute fixed-top top-0 start-100 translate-middle p-2 bg-success border border-light rounded-circle">
+					<span class="visually-hidden">work in progress</span>
+				</span>
 			</div>
 		</div>
 		<div class="card col">
@@ -223,6 +226,9 @@
 				<a routerLink="/home#32">
 					Dialogs
 				</a>
+        <span class="position-absolute fixed-top top-0 start-100 translate-middle p-2 bg-success border border-light rounded-circle">
+					<span class="visually-hidden">work in progress</span>
+				</span>
 			</div>
 		</div>
 		<div class="card col">
