--- a/libs/demo-ui/src/lib/home/home.component.html
+++ b/libs/demo-ui/src/lib/home/home.component.html
@@ -111,9 +111,12 @@
 		</div>
 		<div class="card col">
 			<div class="p-3 text-center bg-light">
-				<a routerLink="/home#5">
+				<a routerLink="/input-text">
 					Input Text
 				</a>
+        <span class="position-absolute fixed-top top-0 start-100 translate-middle p-2 bg-success border border-light rounded-circle">
+					<span class="visually-hidden">work in progress</span>
+				</span>
 			</div>
 		</div>
 		<div class="card col">
@@ -223,7 +226,7 @@
 		</div>
 		<div class="card col">
 			<div class="p-3 text-center bg-light">
-				<a routerLink="/home#32">
+				<a routerLink="/dialogs">
 					Dialogs
 				</a>
         <span class="position-absolute fixed-top top-0 start-100 translate-middle p-2 bg-success border border-light rounded-circle">
