--- a/libs/demo-ui/src/lib/home/home.component.html
+++ b/libs/demo-ui/src/lib/home/home.component.html
@@ -227,9 +227,12 @@
 		</div>
 		<div class="card col">
 			<div class="p-3 text-center bg-light">
-				<a routerLink="/home#31">
-					Progress indicators
+				<a routerLink="/accordion">
+					Accordion
 				</a>
+				<span class="position-absolute fixed-top top-0 start-100 translate-middle p-2 bg-success border border-light rounded-circle">
+					<span class="visually-hidden">work in progress</span>
+				</span>
 			</div>
 		</div>
 		<div class="card col">
@@ -240,6 +243,13 @@
 				<span class="position-absolute fixed-top top-0 start-100 translate-middle p-2 bg-success border border-light rounded-circle">
 					<span class="visually-hidden">work in progress</span>
 				</span>
+			</div>
+		</div>		
+		<div class="card col">
+			<div class="p-3 text-center bg-light">
+				<a routerLink="/home#31">
+					Progress indicators
+				</a>
 			</div>
 		</div>
 		<div class="card col">
