--- a/libs/one-ui/src/lib/stepper/stepper.component.html
+++ b/libs/one-ui/src/lib/stepper/stepper.component.html
@@ -1,4 +1,4 @@
-<ul class="rex-stepper flex-column flex-sm-row flex-nowrap justify-content-md-center"
+<ul class="flex-column flex-sm-row flex-nowrap justify-content-md-center"
 	[id]="stepperId" [ngClass]="stepperClass">
 	<li *ngFor="let step of steps; let i = index" rexStepperStep
 		[step]="step" [type]="type" [ngClass]="stepClass(i)" (stepClick)="onStepClick($event)"
