--- a/libs/one-ui/src/lib/stepper-step/stepper-step.component.html
+++ b/libs/one-ui/src/lib/stepper-step/stepper-step.component.html
@@ -1,5 +1,5 @@
 <a href="javascript:void" *ngIf="step" [title]="step.title" (click)="onStepClick(step.id)">
-	<span class="indicator" [ngClass]="iconClass">{{step.number}}</span>
+	<span class="indicator" [ngClass]="iconClass">{{step.pill}}</span>
 	<span class="title">{{step.title}}</span>
 </a>
 <span class="desc" *ngIf="step && step.desc !== ''">{{step.desc}}</span>
