--- a/libs/one-ux/scss/_global.scss
+++ b/libs/one-ux/scss/_global.scss
@@ -1,3 +1,10 @@
+.code-view {
+  border: 1px solid #000;
+  padding: 0.5rem;
+  background-color: $gray-100;
+  border-radius: $border-radius;
+}
+
 a {
   text-decoration: underline;
 
